cv add projects overflow tweak react 18 fix

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -3,6 +3,18 @@
     font-size: 18px;
 }
 
+.intro button{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+ 
+}
+
+.intro a:hover{
+    text-decoration:none;
+    
+}
+
 .about {
     display: flex;
     flex-direction: column;
@@ -10,7 +22,7 @@
 }
 
 .title {
-    margin: 1em 0.7em;
+    margin: 0 0.7em;
     font-size: 40px;
 }
 
@@ -18,7 +30,7 @@
 @media (min-width: 801px) and (max-width: 1519px) {
     .title {
         font-size: 30px;
-        margin: 0.7em 0.45em;
+        margin: 0 0.45em;
         text-align: center;
     }
 }
@@ -26,7 +38,7 @@
 @media (min-width:360px) and (max-width: 800px) {
     .title {
         font-size: 20px;
-        margin: 0.30em 0.25em;
+        margin: 0 0.25em;
         text-align: center;
     }
 
