--- a/src/styles/ThemePicker.css
+++ b/src/styles/ThemePicker.css
@@ -17,7 +17,6 @@
     display: inline-block;
     padding: 1em 2em;
     font-size: 16px;
-    border-radius: 8px;
     margin-top: 5px;
     width: 100%;
     cursor: pointer;
